- Updated the flags of Ancient Elven Masonry to allow every member of a group to loot it.

[2022-05-09]
- Updated the drop chance of Flesh Giant Spine from Pustulent Horror for the quests Neutralizing the Plague and Neutralizing the Plague.

[2022-05-10]
- Updated the flags of Cult of the Damned Research - Page 1 to allow every member of a group to loot it.
- Updated the flags of Cult of the Damned Research - Page 2 to allow every member of a group to loot it.
- Updated the flags of Cult of the Damned Research - Page 3 to allow every member of a group to loot it.
- Added Emerald Acorn to the loot table of Nightmare Figment for the quest Hope Within the Emerald Nightmare.
- Updated the flags of Emerald Acorn to allow every member of a group to loot it.

[2022-05-11]
- Added Broken Shard of Horror to the loot table of Cultist Shard Watcher for the quests Shatter the Shards and Shatter the Shards.
- Added Broken Shard of Despair to the loot table of Cultist Shard Watcher for the quests Shatter the Shards and Shatter the Shards.
- Added Broken Shard of Suffering to the loot table of Cultist Shard Watcher for the quests Shatter the Shards and Shatter the Shards.
- Updated the flags of Broken Shard of Horror to allow every member of a group to loot it.
- Updated the flags of Broken Shard of Despair to allow every member of a group to loot it.
- Updated the flags of Broken Shard of Suffering to allow every member of a group to loot it.

[2022-05-13]
- Added Charred Wreckage to the loot table of Savage Hill Scavenger for the quest Clean Up.
- Updated the flags of Charred Wreckage to allow every member of a group to loot it.

[2022-05-14]
- Added K3 Equipment to the loot table of Sifreldar Storm Maiden for the quest Equipment Recovery.
- Added K3 Equipment to the loot table of Sifreldar Runekeeper for the quest Equipment Recovery.
- Updated the flags of K3 Equipment to allow every member of a group to loot it.
- Updated the respawn time of Sparksocket's Tools.